# C-python-simulation

./: .gitignore  HTN Planner Moduler approach.sln  README.md
HTN Planner Moduler approach/: Aircraft.cpp  Aircraft.h  Button.h  CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  FileLoader.cpp  HTN Planner Moduler approach.vcxproj  HTN Planner Moduler approach.vcxproj.filters  HTNCore.cpp  HTNCore.h  Radar.cpp  Radar.h  Simulation.cpp  Simulation.h  SimulationObject.h  Waypoint.cpp  Waypoint.h  aircraft_behavior.py  aircraft_simulation.cp312-win_amd64.pyd  aircraft_simulation.cpp  aircraft_simulation.pyx  aircraft_simulation_with_graphics.py  enums.h  main.cpp  my_plan.py  setup.py  wrapper.cp312-win_amd64.pyd  wrapper.cpp  wrapper.pyx
HTN Planner Moduler approach/x64/Debug/: HTN Planner Moduler approach.exe.recipe  main.obj.enc  vc143.idb
HTN Planner Moduler approach/x64/Debug/HTN Plan.5168f7c3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HTN Planner Moduler approach.lastbuildstate  link.command.1.tlog  link.secondary.1.tlog
HTN Planner Moduler approach/x64/Release/: HTN Planner Moduler approach.exe.recipe  HTN Planner Moduler approach.ipdb
HTN Planner Moduler approach/x64/Release/HTN Plan.5168f7c3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HTN Planner Moduler approach.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
assets/files/: paths.ini
x64/Release/: HTN Planner Moduler approach.exp  HTN Planner Moduler approach.lib
